gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-needs-allocator.rs
#![needs_allocator] // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

